#17 Correcting anomalies on firefow (navbar, scrollbar project, placeholder form

--- a/css/sass.css
+++ b/css/sass.css
@@ -117,6 +117,7 @@ h3, h4, p, a, input, select, textarea, button, li {
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  gap: 1rem;
   padding: 0 0 0 2rem;
 }
 @media screen and (max-width: 769px) {
@@ -130,6 +131,7 @@ h3, h4, p, a, input, select, textarea, button, li {
 }
 .socialNetworks--icon {
   display: flex;
+  width: 4rem;
   height: 4rem;
 }
 
@@ -285,6 +287,7 @@ h3, h4, p, a, input, select, textarea, button, li {
   color: #22272E;
   font-weight: bold;
   font-size: 2rem;
+  opacity: 1;
 }
 .forms--input:focus {
   outline: none;
@@ -559,6 +562,7 @@ h3, h4, p, a, input, select, textarea, button, li {
   scroll-behavior: smooth;
   gap: 5rem;
   -ms-text-overflow-style: none;
+  scrollbar-width: none;
 }
 @media screen and (max-width: 426px) {
   .mesProjets-carousel {
@@ -574,6 +578,7 @@ h3, h4, p, a, input, select, textarea, button, li {
 .mesProjets-carousel__slide {
   flex: 0 0 60%;
   padding: 4rem;
+  min-height: 60vh;
   border: 0px solid #22272E;
   border-radius: 4rem;
   box-shadow: rgba(0, 0, 0, 0.35) 0px -50px 36px -28px inset;
@@ -590,7 +595,7 @@ h3, h4, p, a, input, select, textarea, button, li {
   }
 }
 .mesProjets-carousel__slide:first-child {
-  margin-top: 10%;
+  margin-top: 5%;
 }
 @media screen and (max-width: 426px) {
   .mesProjets-carousel__slide:first-child {
@@ -599,7 +604,7 @@ h3, h4, p, a, input, select, textarea, button, li {
   }
 }
 .mesProjets-carousel__slide:last-child {
-  margin-bottom: 10%;
+  margin-bottom: 5%;
 }
 @media screen and (max-width: 426px) {
   .mesProjets-carousel__slide:last-child {
