--- a/sass/layouts/_forms.scss
+++ b/sass/layouts/_forms.scss
@@ -86,6 +86,7 @@
             color: $color-font;
             font-weight: bold;
             font-size: 2rem;
+            opacity: 1;
         }
         &:focus {
             outline: none;
