--- a/sass/layouts/_navabar.scss
+++ b/sass/layouts/_navabar.scss
@@ -31,7 +31,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    // gap: 1rem;
+    gap: 1rem;
     padding: 0 0 0 2rem;
     @include tablet-only {
         flex: 2;
@@ -42,7 +42,8 @@
     }
     &--icon {
         display: flex;
-        height: 4rem; 
+        width: 4rem;
+        height: 4rem;
     }
 }
 
